# bevy-game-of-life

./: Cargo.toml  README.md
src/: board.rs  main.rs
src/systems/: keyboard.rs  mouse.rs
